.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Values__c.object
<CustomObject>
    <description>Performance management - record values linked to employees</description>
    <fields>
        <fullName>xcdhcm__Company_value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company value</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>xcdhcm__Company_value__c.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>xcdhcm__Company_value__c</referenceTo>
        <relationshipLabel>Company values</relationshipLabel>
        <relationshipName>Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Performance_Review__c</fullName>
        <label>Performance review</label>
        <referenceTo>xcdhcm__Employee_Review__c</referenceTo>
        <relationshipLabel>Values</relationshipLabel>
        <relationshipName>Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Values</label>
    <nameField>
        <label>Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>